crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__sorting__select_order_by_artist_album_count_agg.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
