crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Crazy Train"
      },
      {
        "Name": "I Don't Know"
      }
    ]
  }
]
