crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__sorting__sorting_by_relationship_count_with_predicate.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Metallica"
      },
      {
        "Name": "U2"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
